Mitigates scrolling issue on iOS
This mitigates scrolling issue on iOS but is no final solution.

I did various tests and it is kind of strange that only iOS has issues here. I still think that some combination of the iframe and iOS specific issues are the root cause here but I found no 100% solution so far.

I would like to use the apps on my mobile so I hope this small change can be included.

(closes #230)

--- a/shell/client/shell.css
+++ b/shell/client/shell.css
@@ -898,6 +898,10 @@ aside #social>p {
     position: static;
     margin: 100px 150px;
   }
+  #app.main-content {
+    -webkit-overflow-scrolling:touch;
+    overflow: auto;
+  }
 }
 
 @media screen and (max-width: 900px) {
